--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ ipython==6.5.0
 ipython-genutils==0.2.0
 jedi==0.12.1
 kiwisolver==1.0.1
+Markdown==3.2.1
 matplotlib==3.0.2
 munch==2.3.2
 numpy==1.15.1
