--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cligj==0.5.0
 cycler==0.10.0
 decorator==4.3.0
 descartes==1.1.0
+dj-database-url==0.5.0
 Django==2.1
 django-bootstrap4==1.1.1
 django-crispy-forms==1.9.0
@@ -40,6 +41,7 @@ Pygments==2.2.0
 pyparsing==2.3.0
 PySAL==1.14.4.post2
 python-dateutil==2.7.5
+python-decouple==3.3
 pytz==2018.5
 requests==2.20.0
 scipy==1.1.0
