--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+asgiref==3.2.7
 attrs==18.2.0
 backcall==0.1.0
 beautifulsoup4==4.8.2
@@ -11,10 +12,12 @@ cycler==0.10.0
 decorator==4.3.0
 descartes==1.1.0
 dj-database-url==0.5.0
-Django==2.1
+Django==3.0.5
 django-bootstrap4==1.1.1
 django-crispy-forms==1.9.0
 django-filter==2.2.0
+django-geojson==3.0.0
+django-leaflet==0.26.0
 django-tables2==2.2.1
 django-widget-tweaks==1.4.2
 Fiona==1.8.1
@@ -24,6 +27,7 @@ idna==2.7
 ipython==6.5.0
 ipython-genutils==0.2.0
 jedi==0.12.1
+jsonfield==3.1.0
 kiwisolver==1.0.1
 Markdown==3.2.1
 matplotlib==3.0.2
@@ -33,7 +37,7 @@ pandas==0.23.4
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
-pkg-resources==0.0.0
+Pillow==7.1.2
 prompt-toolkit==1.0.15
 psycopg2==2.7.5
 ptyprocess==0.6.0
@@ -50,6 +54,7 @@ simplegeneric==0.8.1
 six==1.11.0
 soupsieve==1.9.5
 SQLAlchemy==1.3.13
+sqlparse==0.3.1
 tablib==1.1.0
 traitlets==4.3.2
 urllib3==1.24
