--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ cycler==0.10.0
 decorator==4.3.0
 descartes==1.1.0
 dj-database-url==0.5.0
-Django==3.0.3
+Django==3.0
 django-bootstrap4==1.1.1
 django-crispy-forms==1.9.0
 django-filter==2.2.0
@@ -38,6 +38,7 @@ parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
 Pillow==7.1.2
+pkg-resources==0.0.0
 prompt-toolkit==1.0.15
 psycopg2==2.7.5
 ptyprocess==0.6.0
