adding region to settings and env file

--- a/test.env
+++ b/test.env
@@ -5,3 +5,4 @@ DATABASE_URL=postgis://user:password@localhost:5432/db_name
 AWS_ACCESS_KEY_ID=access_key_id
 AWS_SECRET_ACCESS_KEY=aws-secret-key
 AWS_STORAGE_BUCKET_NAME=bucket-name
+AWS_S3_REGION_NAME=region-name
