--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ attrs==18.2.0
 backcall==0.1.0
 beautifulsoup4==4.8.2
 bootstrap4==0.1.0
+boto3==1.14.38
+botocore==1.17.38
 certifi==2018.10.15
 chardet==3.0.4
 click==6.7
@@ -18,8 +20,11 @@ django-crispy-forms==1.9.0
 django-filter==2.2.0
 django-geojson==3.0.0
 django-leaflet==0.26.0
+django-queryset-csv==1.1.0
+django-storages==1.9.1
 django-tables2==2.2.1
 django-widget-tweaks==1.4.2
+docutils==0.15.2
 Fiona==1.8.1
 geomet==0.2.0.post2
 grako==3.99.9
@@ -27,6 +32,7 @@ idna==2.7
 ipython==6.5.0
 ipython-genutils==0.2.0
 jedi==0.12.1
+jmespath==0.10.0
 jsonfield==3.1.0
 kiwisolver==1.0.1
 Markdown==3.2.1
@@ -49,6 +55,7 @@ python-dateutil==2.7.5
 python-decouple==3.3
 pytz==2018.5
 requests==2.20.0
+s3transfer==0.3.3
 scipy==1.1.0
 Shapely==1.6.4.post2
 simplegeneric==0.8.1
@@ -58,5 +65,6 @@ SQLAlchemy==1.3.13
 sqlparse==0.3.1
 tablib==1.1.0
 traitlets==4.3.2
+unicodecsv==0.14.1
 urllib3==1.24
 wcwidth==0.1.7
