--- a/infra/ansible/database.yml
+++ b/infra/ansible/database.yml
@@ -24,7 +24,7 @@
 
   - name: Ensure database is created
     become_user: postgres
-    postgresql_db: name={{ db_name }}
+    postgresql_db: name={{ database_name }}
               encoding='UTF-8'
               lc_collate='en_US.UTF-8'
               lc_ctype='en_US.UTF-8'
@@ -33,9 +33,9 @@
 
   - name: Ensure user has access to the database
     become_user: postgres  
-    postgresql_user: db={{ db_name }}
-                name={{ db_user }}
-                password={{ db_password }}
+    postgresql_user: db={{ database_name }}
+                name={{ database_user }}
+                password={{ database_pass }}
                 priv=ALL
                 state=present
   
@@ -43,11 +43,11 @@
     become_user: postgres
     community.general.postgresql_ext:
       name: postgis
-      db: "{{ db_name }}"
+      db: "{{ database_name }}"
 
   - name: Ensure user does not have unnecessary privileges
     become_user: postgres
-    postgresql_user: name={{ db_user }}
+    postgresql_user: name={{ database_user }}
                 role_attr_flags=NOSUPERUSER,NOCREATEDB
                 state=present
     notify:
