--- a/infra/ansible/database.yml
+++ b/infra/ansible/database.yml
@@ -1,6 +1,7 @@
 
-- hosts: all
-  remote_user: ubuntu
+- hosts: localhost
+  connection: local
+  # remote_user: ubuntu
   become: True
   vars_files:
     - vars/main.yml
@@ -11,7 +12,7 @@
 
   - name: Install software
     apt:
-      name: ['awscli', 'python3-pip', 'postgresql', 'postgresql-contrib', 'postgis', 'libpq-dev']
+      name: ['awscli', 'python3-pip', 'python-pip', 'postgresql', 'postgresql-contrib', 'postgis', 'libpq-dev']
       state: present
     tags: install
   
