--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,36 @@
-asgiref==3.2.7
+asgiref==3.4.1
 attrs==18.2.0
 backcall==0.1.0
+backports.zoneinfo==0.2.1
 beautifulsoup4==4.8.2
 bootstrap4==0.1.0
-boto3==1.14.38
-botocore==1.17.38
+boto3==1.20.24
+botocore==1.23.24
 certifi==2018.10.15
 chardet==3.0.4
+charset-normalizer==2.0.9
 click==6.7
 click-plugins==1.0.4
 cligj==0.5.0
 cycler==0.10.0
+Cython==0.29.24
 decorator==4.3.0
 descartes==1.1.0
 dj-database-url==0.5.0
-Django==3.0
+Django==4.0
 django-bootstrap4==1.1.1
 django-crispy-forms==1.9.0
-django-filter==2.2.0
-django-geojson==3.0.0
-django-leaflet==0.26.0
+django-filter==21.1
+django-geojson==3.2.0
+django-leaflet==0.28.2
 django-queryset-csv==1.1.0
-django-storages==1.9.1
-django-tables2==2.2.1
+django-storages==1.12.3
+django-tables2==2.4.1
 django-widget-tweaks==1.4.2
 docutils==0.15.2
 Fiona==1.8.1
 geomet==0.2.0.post2
+geopandas==0.10.2
 grako==3.99.9
 idna==2.7
 ipython==6.5.0
@@ -38,24 +42,24 @@ kiwisolver==1.0.1
 Markdown==3.2.1
 matplotlib==3.0.2
 munch==2.3.2
-numpy==1.15.1
-pandas==0.23.4
+numpy==1.21.4
+pandas==1.3.5
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
-Pillow==7.1.2
-pkg-resources==0.0.0
+Pillow==8.4.0
 prompt-toolkit==1.0.15
 psycopg2==2.8.6
 ptyprocess==0.6.0
 Pygments==2.2.0
 pyparsing==2.3.0
+pyproj==3.3.0
 PySAL==1.14.4.post2
 python-dateutil==2.7.5
 python-decouple==3.3
 pytz==2018.5
-requests==2.20.0
-s3transfer==0.3.3
+requests==2.26.0
+s3transfer==0.5.0
 scipy==1.1.0
 Shapely==1.6.4.post2
 simplegeneric==0.8.1
@@ -66,5 +70,5 @@ sqlparse==0.3.1
 tablib==1.1.0
 traitlets==4.3.2
 unicodecsv==0.14.1
-urllib3==1.24
+urllib3==1.26.7
 wcwidth==0.1.7
