--- a/infra/ansible/database.yml
+++ b/infra/ansible/database.yml
@@ -9,6 +9,7 @@
   - name: Update apt-get repo and cache
     apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
 
+  # acl added because it is needed for some postgres steps
   - name: Install software
     apt:
       name: ['awscli', 'python3-pip', 'postgresql', 'postgresql-contrib', 'postgis', 'libpq-dev', 'acl']
