added branch to env.example file

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ DATABASE_URL=db://db_usr:db_pass@localhost:5432/db_name
 DATABASE_USER=db_user
 DATABASE_NAME=db_name
 DATABASE_PASS=db_pass
+BRANCH=master
 AWS_ACCESS_KEY_ID=keyid
 AWS_SECRET_ACCESS_KEY=secret_key
 AWS_STORAGE_BUCKET_NAME=bucketname
