Set up infra to pull in county data from s3; reorged infra code to use s3 buckets set from env, no monkeying around in subsequent steps

--- a/infra/ansible/website.yml
+++ b/infra/ansible/website.yml
@@ -29,6 +29,11 @@
       virtualenv: /home/ubuntu/exploring_soils/myvenv
       virtualenv_command: /usr/bin/python3 -m venv
 
+  - name: Run a script to download county data and load
+    script: load_county_data.sh {{ database_name }} {{ database_user }} {{ database_pass }} {{aws_backup_bucket_name}}
+    args:
+      creates: /home/ubuntu/exploring_soils/loaded_county_layer
+
   - name: Move apache config file
     copy:
       src: /home/ubuntu/exploring_soils/deployment/000-default.conf
