--- a/infra/ansible/website.yml
+++ b/infra/ansible/website.yml
@@ -12,7 +12,7 @@
 
   - name: Install software
     apt:
-      name: ['awscli', 'python3-pip', 'python3-venv', 'gdal-bin', 'apache2', 'libapache2-mod-wsgi-py3', 'git', 'postgresql', 'postgresql-contrib', 'postgis', 'libpq-dev']
+      name: ['awscli', 'python3-pip', 'python3-venv', 'gdal-bin', 'nginx', 'supervisor', 'git', 'postgresql', 'postgresql-contrib', 'postgis', 'libpq-dev']
       state: present
     tags: install
 
@@ -36,8 +36,8 @@
 
   - name: Move apache config file
     copy:
-      src: /home/ubuntu/exploring_soils/deployment/000-default.conf
-      dest: /etc/apache2/sites-available/000-default.conf
+      src: /home/ubuntu/exploring_soils/infra/ansible/nginx_config
+      dest: /etc/nginx/sites-available/exploring_soils
       remote_src: yes      
 
   # Variabalize the env file
@@ -53,7 +53,7 @@
       state: directory
       mode: '0755'
 
-  # This will be pulling from an S3 bucket
+  # This should be pulling from an S3 bucket
   - name: Move backup db dump file
     copy:
       src: ../../data/dump.json
