--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ Fiona>=1.8.1
 geomet>=0.2.0.post2
 geopandas>=0.10.2
 grako>=3.99.9
+gunicorn==20.1.0
 idna>=2.7
 ipython>=6.5.0
 ipython-genutils>=0.2.0
