--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@ AWS_SECRET_ACCESS_KEY=secret_key
 AWS_STORAGE_BUCKET_NAME=bucketname
 AWS_S3_REGION_NAME=region
 KEY_NAME=pemkeyname_no_extension_assumes_in_ssh_dir
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+EMAIL_HOST=smtp.host.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=user@smtphost.com
+EMAIL_HOST_PASSWORD=smtppass
