--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 SECRET_KEY=secret
 DEBUG=True
 ALLOWED_HOSTS=.localhost,127.0.0.1
+CSRF_TRUSTED_ORIGINS=myurl.com
 DEPLOYED=TRUE # For how to show static files
 DATABASE_URL=db://db_usr:db_pass@localhost:5432/db_name
 DATABASE_USER=db_user
 DATABASE_NAME=db_name
 DATABASE_PASS=db_pass
 BRANCH=master
+ENV=dev
 AWS_ACCESS_KEY_ID=keyid
 AWS_SECRET_ACCESS_KEY=secret_key
 AWS_STORAGE_BUCKET_NAME=bucketname
