--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 SECRET_KEY=secret
 DEBUG=True
 ALLOWED_HOSTS=.localhost,127.0.0.1
-CSRF_TRUSTED_ORIGINS=myurl.com
+CSRF_TRUSTED_ORIGINS=https://myurl.com
 DEPLOYED=TRUE # For how to show static files
 DATABASE_URL=db://db_usr:db_pass@localhost:5432/db_name
 DATABASE_USER=db_user
