--- a/infra/ansible/website.yml
+++ b/infra/ansible/website.yml
@@ -39,6 +39,11 @@
     args:
       creates: /home/ubuntu/exploring_soils/loaded_static_data
 
+  - name: Run a script to download 2023 lab data for biomass and forage data and load to database
+    script: load_lab_data.sh {{ database_name }} {{ database_user }} {{ database_pass }} {{aws_backup_bucket_name}}
+    args:
+      creates: /home/ubuntu/exploring_soils/loaded_static_data      
+
   - name: Move apache config file
     copy:
       src: /home/ubuntu/exploring_soils/deployment/000-default.conf
