--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ ENV=dev
 AWS_ACCESS_KEY_ID=keyid
 AWS_SECRET_ACCESS_KEY=secret_key
 AWS_STORAGE_BUCKET_NAME=bucketname
+AWS_WISC_CC_PHOTO_LOCATION=nother_bucket
 AWS_S3_REGION_NAME=region
 KEY_NAME=pemkeyname_no_extension_assumes_in_ssh_dir
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
@@ -19,3 +20,4 @@ EMAIL_HOST=smtp.host.com
 EMAIL_PORT=587
 EMAIL_HOST_USER=user@smtphost.com
 EMAIL_HOST_PASSWORD=smtppass
+GDU_LAMBDA_URL=URL_FOR_LAMBDA
