made git clone a shallower depth to save space and time during deploy; changed dumpdata to use `--output` rather than pipe.

--- a/infra/ansible/website.yml
+++ b/infra/ansible/website.yml
@@ -22,6 +22,7 @@
       force: yes
       dest: /home/ubuntu/exploring_soils
       version: "{{ branch }}"
+      depth: 2
 
   - name: Install Python modules
     pip:
