working collaboration functionality implemented!

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ AWS_ACCESS_KEY_ID=keyid
 AWS_SECRET_ACCESS_KEY=secret_key
 AWS_STORAGE_BUCKET_NAME=bucketname
 AWS_WISC_CC_PHOTO_LOCATION=nother_bucket
+AWS_WISC_CC_RESEARCHER_DOC_LOCATION=yet_another_bucket
 AWS_S3_REGION_NAME=region
 KEY_NAME=pemkeyname_no_extension_assumes_in_ssh_dir
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
