--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ dj-database-url==0.5.0
 Django==4.2.15
 django-bootstrap4==1.1.1
 django-crispy-forms==1.9.0
+django-csp==3.8
 django-filter==21.1
 django-geojson==3.2.0
 django-leaflet==0.28.2
